--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title>JL Operation App</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js"></script>
+    <script src="https://apis.google.com/js/gapi.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
